--- a/css/styles.css
+++ b/css/styles.css
@@ -632,3 +632,94 @@ focus {
   padding-left: 16px;
   padding-right: 16px;
 }
+
+
+/* contacts */
+
+.box {
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+/* Adds animation when hovering. */
+.box:hover {
+  animation-name: changeBgColor;
+  animation-duration: 3000ms;
+}
+
+@keyframes changeBgColor {
+  0% {
+    background-color: teal;
+  }
+
+  50% {
+    background-color: orange;
+  }
+
+  100% {
+    background-color: deepskyblue;
+  }
+}
+
+
+
+
+/* overley */
+
+
+.team-list-wrapp{
+  display: block;
+}
+
+.image-wrap{
+ 
+
+  position: relative;
+ overflow: hidden;
+}
+
+.overley{
+
+position: absolute;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow-y: scroll;
+
+transition-property: transform ;
+transition-duration: 250ms;
+transform: translate(0, 100%);
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition-delay: 0;
+
+
+
+
+
+
+font-size: 16px;
+color: var(--team-color);
+padding-top: 40px;
+padding-bottom: 164px;
+padding-left: 32px;
+padding-right: 32px;
+
+background-color: rgba(77, 90, 229, 1);
+
+
+}
+
+.link-eff:hover .overley,
+.link-eff:focus .overley {
+transform: translate(0, 0%);
+
+
+}
+
