--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ html {
   --fot-color: #e7e9fc;
   --border-color: #8e8f99;
   --bg-link-dark: rgba(255, 255, 255, 0.1);
+  --transition-direction-func: 250ms;
 }
 
 p,
@@ -320,6 +321,7 @@ focus {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   margin-bottom: 72px;
+  width: calc(1158px - 30px);
 }
 .custum-list {
   display: flex;
@@ -633,7 +635,6 @@ focus {
   padding-right: 16px;
 }
 
-
 /* contacts */
 
 .box {
@@ -667,59 +668,125 @@ focus {
   }
 }
 
-
-
-
 /* overley */
 
-
-.team-list-wrapp{
+.team-list-wrapp {
   display: block;
 }
 
-.image-wrap{
- 
-
+.image-wrap {
   position: relative;
- overflow: hidden;
+  overflow: hidden;
 }
 
-.overley{
+.overley {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 
-position: absolute;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow-y: scroll;
+  transition-property: transform;
+  transition-duration: var(--transition-direction-func);
+  transform: translate(0, 100%);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 
-transition-property: transform ;
-transition-duration: 250ms;
-transform: translate(0, 100%);
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-transition-delay: 0;
+  font-size: 16px;
+  color: var(--team-color);
+  padding-top: 40px;
+  padding-bottom: 164px;
+  padding-left: 32px;
+  padding-right: 32px;
 
-
-
-
-
-
-font-size: 16px;
-color: var(--team-color);
-padding-top: 40px;
-padding-bottom: 164px;
-padding-left: 32px;
-padding-right: 32px;
-
-background-color: rgba(77, 90, 229, 1);
-
-
+  background-color: rgba(77, 90, 229, 1);
 }
 
 .link-eff:hover .overley,
 .link-eff:focus .overley {
-transform: translate(0, 0%);
-
-
+  transform: translate(0, 0%);
 }
 
+/* -------MODAL-WINDOW------ */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden {
+  opacity: o;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 576px;
+  background-color: rgba(252, 252, 252, 1);
+  border-radius: 4px;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(231, 233, 252, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color var(--transition-direction-func);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--menu-focus-color);
+}
+
+.modal-close-btn-icon:hover,
+.modal-close-btn-icon:focus {
+  fill: var(--transition-direction-func);
+}
+
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--menu-eff-color);
+}
+
+.studio::after {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 4px;
+  background-size: auto;
+  background-color: #404BBF;
+  border-radius: 2px;
+  margin-top: 72px;
+  position: absolute;}
+
+  .portfolio::after {
+    display: block;
+    content: "";
+    width: 68px;
+    height: 4px;
+    background-size: auto;
+    background-color: #404BBF;
+    border-radius: 2px;
+    margin-top: 72px;
+    position: absolute;
