--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,10 @@ body {
   text-transform: uppercase;
 }
 .menu-list {
-  display: flex;
-  align-items: center;
-  height: 72px;
+ 
+ 
+ padding-top: 24px;
+ padding-bottom: 24px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -96,7 +97,7 @@ body {
 }
 .mail-link {
   color: var(--menu-color);
-  gap: 40px;
+  
 }
 
 .menu-list-effect:hover {
@@ -472,8 +473,8 @@ focus {
   color: var(--menu-color);
 }
 
-.btn-font:hover,
-:focus {
+.btn-fon:hover,
+.btn-fon:focus {
   color: var(--team-color);
   border-radius: 4px;
   background: #404bbf;
@@ -511,6 +512,8 @@ focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 24px;
+  padding-bottom: 28px;
 }
 
 .header-menu {
@@ -691,7 +694,7 @@ focus {
   transition-duration: var(--transition-direction-func);
   transform: translate(0, 100%);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
+ 
 
   font-size: 16px;
   color: var(--team-color);
@@ -777,7 +780,7 @@ focus {
   background-size: auto;
   background-color: #404BBF;
   border-radius: 2px;
-  margin-top: 72px;
+  margin-top: 25px;
   position: absolute;}
 
   .portfolio::after {
@@ -788,5 +791,6 @@ focus {
     background-size: auto;
     background-color: #404BBF;
     border-radius: 2px;
-    margin-top: 72px;
+    margin-top: 25px;
     position: absolute;
+  }
